[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "An unofficial Rust wrapper for the darksky.net API."
documentation = "https://docs.rs/darksky"
homepage = "https://github.com/zeyla/darksky.rs"
license = "ISC"
keywords = [
    "api",
    "dark",
    "darksky",
    "sky",
    "weather",
]
name = "darksky"
readme = "README.md"
repository = "https://github.com/zeyla/darksky.rs.git"
version = "0.8.1"
edition="2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures-preview = {version = "0.3.0-alpha.19", features = ["async-await", "compat"], optional=true}
async-trait = {version = "0.1.17", optional = true}
hyper = {version = "0.13.0-alpha.4", optional = true}

[features]
default = ["hyper-support"]
hyper-support = ["futures-preview", "async-trait", "hyper"]

[package.metadata.docs.rs]
all-features = true
